--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -17,7 +17,6 @@
 ^https?://(www.)?g.cn url 302 https://www.google.com
 
 [URL-REJECTION]
-^http?://api.weather.ifjing.com/adapi/
 
 [TCP]
 //me
@@ -82,7 +81,7 @@ DOMAIN-SUFFIX,windows.net,选择微软服务的Policy，不懂就选择DIRECT
 DOMAIN-SUFFIX,windowsupdate.com,选择微软服务的Policy，不懂就选择DIRECT
 
 //Apple
-IP-CIDR,17.0.0.0/8,选择Apple的Policy，不懂就选择DIRECT,no-resolve
+
 DOMAIN,appleiphonecell.com,选择Apple的Policy，不懂就选择DIRECT
 USER-AGENT,AppStore*,选择Apple的Policy，不懂就选择DIRECT
 USER-AGENT,com.apple.appstored*,选择Apple的Policy，不懂就选择DIRECT
@@ -99,7 +98,7 @@ DOMAIN-SUFFIX,icloud.com,选择Apple的Policy，不懂就选择DIRECT
 DOMAIN-SUFFIX,icloud-content.com,选择Apple的Policy，不懂就选择DIRECT
 DOMAIN-SUFFIX,itunes.com,选择Apple的Policy，不懂就选择DIRECT
 DOMAIN-SUFFIX,itunes-apple.com.akadns.net,选择Apple的Policy，不懂就选择DIRECT
-
+IP-CIDR,17.0.0.0/8,DIRECT
 HOST-SUFFIX,xp.apple.com,DIRECT
 USER-AGENT,com.apple.appstored*,DIRECT
 USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
@@ -135,6 +134,8 @@ USER-AGENT,geod*,DIRECT
 USER-AGENT,locationd*,DIRECT
 USER-AGENT,Maps*,DIRECT
 USER-AGENT,%E5%9C%B0%E5%9B%BE*,DIRECT
+GEOIP,US,PROXY
+GEOIP,HK,PROXY
 IP-CIDR,67.198.55.0/24,PROXY,no-resolve
 IP-CIDR,91.108.0.0/16,PROXY,no-resolve
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
@@ -225,17 +226,12 @@ HOST-SUFFIX,fc-feed.cdn.bcebos.com,REJECT
 HOST-SUFFIX,zkres.myzaker.com,REJECT
 HOST-SUFFIX,ggs.myzaker.com,REJECT
 HOST-SUFFIX,t.h5data.com,REJECT
-HOST,api.weather.ifjing.com/adapi,REJECT
 HOST-SUFFIX,oimageb4.ydstatic.com,REJECT
 HOST-SUFFIX,appuse.ifjing.com,REJECT
-HOST-SUFFIX,mob.5hito.com,REJECT
 HOST-SUFFIX,track-cn.felink.com,REJECT
 HOST-SUFFIX,oimagec8.ydstatic.com,REJECT
-HOST-SUFFIX,log.yex.youdao.com,REJECT
 HOST,csi.gstatic.com,REJECT
 HOST,graph.facebook.com,REJECT
-HOST,player.ooyala.com,REJECT
-HOST,ec.c.ooyala.com,REJECT
 HOST-KEYWORD,mopub,REJECT
 USER-AGENT,wpsoffice*,REJECT
 HOST-SUFFIX,kingsoft-office-service.com,REJECT
@@ -260,12 +256,7 @@ HOST,googlesyndication.com,REJECT
 HOST,pagead2.googlesyndication.com,REJECT
 HOST,afs.googlesyndication.com,REJECT
 HOST,video-ad-stats.googlesyndication.com,REJECT
-HOST,azabu-u.ac.jp,REJECT
-HOST,couchcoaster.jp,REJECT
-HOST,delivery.dmkt-sp.jp,REJECT
 HOST,files.adform.net,REJECT
-HOST,m-78.jp,REJECT
-HOST,nichibenren.or.jp,REJECT
 HOST,nicorette.co.kr,REJECT
 HOST,shizen-no-megumi.com,REJECT
 HOST,s0.2mdn.net,REJECT
@@ -288,16 +279,7 @@ HOST-SUFFIX,cm.bilibili.com,REJECT
 HOST-SUFFIX,tc.51la.net,REJECT
 HOST-SUFFIX,51.la,REJECT
 HOST-SUFFIX,dc.csdn.net,REJECT
-HOST-SUFFIX,e.crashlytics.com,REJECT
-HOST-SUFFIX,setting.crashlytics.com,REJECT
-HOST-SUFFIX,settings.crashlytics.com,REJECT
 HOST-SUFFIX,tracking-server-prod-1.zenmxapps.com,REJECT
-HOST-SUFFIX,api.appsflyer.com,REJECT
-HOST-SUFFIX,events.appsflyer.com,REJECT
-HOST-SUFFIX,hq.appsflyer.com,REJECT
-HOST-SUFFIX,stats.appsflyer.com,REJECT
-HOST-SUFFIX,t.appsflyer.com,REJECT
-HOST-SUFFIX,track.appsflyer.com,REJECT
 HOST-SUFFIX,dmtracking.alibaba.com,REJECT
 HOST-SUFFIX,dmtracking2.alibaba.com,REJECT
 HOST-SUFFIX,acookie.linezing.com,REJECT
@@ -311,333 +293,6 @@ HOST-SUFFIX,report.qcloud.com,REJECT
 HOST-SUFFIX,googletagmanager.com,REJECT
 HOST-SUFFIX,stats.g.doubleclick.net,REJECT
 HOST-SUFFIX,hpd.baidu.com,REJECT
-HOST-SUFFIX,hm.baidu.com,REJECT
-HOST-SUFFIX,c.effectivemeasure.net,REJECT
-HOST-SUFFIX,hk-cdn.effectivemeasure.net,REJECT
-HOST-SUFFIX,me-cdn.effectivemeasure.net,REJECT
-HOST-SUFFIX,s.effectivemeasure.net,REJECT
-HOST-SUFFIX,sg-cdn.effectivemeasure.net,REJECT
-HOST-SUFFIX,.effectivemeasure.net,REJECT
-HOST-SUFFIX,s.qhupdate.com,REJECT
-HOST-SUFFIX,hs.qhupdate.com,REJECT
-HOST-SUFFIX,referrer.disqus.com,REJECT
-HOST-SUFFIX,static.criteo.net,REJECT
-HOST-SUFFIX,xdadevelopers.browsi.mobi,REJECT
-HOST-SUFFIX,lb.statsevent.com,REJECT
-HOST-SUFFIX,pixel.quantserve.com,REJECT
-HOST-SUFFIX,ef-dongfeng.tanx.com,REJECT
-HOST-SUFFIX,stats.mokeedev.com,REJECT
-HOST-SUFFIX,stat.m.jd.com,REJECT
-HOST-SUFFIX,stat.zol.com.cn,REJECT
-HOST-SUFFIX,uid.mdbchina.com,REJECT
-HOST-SUFFIX,sp0.baidu.com,REJECT
-HOST-SUFFIX,trackersimulator.org,REJECT
-HOST-SUFFIX,eviltracker.net,REJECT
-HOST-SUFFIX,do-not-tracker.org,REJECT
-HOST-SUFFIX,tongji.tom.com,REJECT
-HOST-SUFFIX,track.china.com,REJECT
-HOST-SUFFIX,acs4baichuan.m.taobao.com,REJECT
-HOST-SUFFIX,adash.m.taobao.com,REJECT
-HOST-SUFFIX,adash.man.aliyuncs.com,REJECT
-HOST-SUFFIX,adashbc.m.taobao.com,REJECT
-HOST-SUFFIX,adashbc.ut.taobao.com,REJECT
-HOST-SUFFIX,adashx.m.taobao.com,REJECT
-HOST-SUFFIX,adashxgc.ut.taobao.com,REJECT
-HOST-SUFFIX,aecpm.alicdn.com,REJECT
-HOST-SUFFIX,afp.alicdn.com,REJECT
-HOST-SUFFIX,afpmm.alicdn.com,REJECT
-HOST-SUFFIX,agoodm.m.taobao.com,REJECT
-HOST-SUFFIX,ai.m.taobao.com,REJECT
-HOST-SUFFIX,ai.taobao.com,REJECT
-HOST-SUFFIX,alipaylog.com,REJECT
-HOST-SUFFIX,api.wapa.taobao.com,REJECT
-HOST-SUFFIX,api.waptest.taobao.com,REJECT
-HOST-SUFFIX,appdownload.alicdn.com,REJECT
-HOST-SUFFIX,asearch.alicdn.com,REJECT
-HOST-SUFFIX,dmtracking.alibaba.com,REJECT
-HOST-SUFFIX,dmtracking2.alibaba.com,REJECT
-HOST-SUFFIX,dongfeng.alicdn.com,REJECT
-HOST-SUFFIX,dressimage.img-cn-beijing.aliyuncs.com,REJECT
-HOST-SUFFIX,fs-uc-nearme-com-cn.oss-cn-hangzhou.aliyuncs.com,REJECT
-HOST-SUFFIX,gen.alicdn.com,REJECT
-HOST-SUFFIX,gma.alicdn.com,REJECT
-HOST-SUFFIX,img-dsp.oss-cn-beijing.aliyuncs.com,REJECT
-HOST-SUFFIX,ipinyou.com,REJECT
-HOST-SUFFIX,jiayi1.oss-cn-shanghai.aliyuncs.com,REJECT
-HOST-SUFFIX,m.simaba.taobao.com,REJECT
-HOST-SUFFIX,m-adash.m.taobao.com,REJECT
-HOST-SUFFIX,mct01.com,REJECT
-HOST-SUFFIX,osfota.cdn.aliyun.com,REJECT
-HOST-SUFFIX,p4psearch.china.alibaba.com,REJECT
-HOST-SUFFIX,pics.taobaocdn.com,REJECT
-HOST-SUFFIX,pindao.huoban.taobao.com,REJECT
-HOST-SUFFIX,re.m.taobao.com,REJECT
-HOST-SUFFIX,re.taobao.com,REJECT
-HOST-SUFFIX,rj.m.taobao.co,REJECT
-HOST-SUFFIX,rj.m.taobao.com,REJECT
-HOST-SUFFIX,sdkinit.taobao.com,REJECT
-HOST-SUFFIX,show.re.taobao.com,REJECT
-HOST-SUFFIX,simaba.taobao.com,REJECT
-HOST-SUFFIX,strip.alicdn.com,REJECT
-HOST-SUFFIX,strip.taobaocdn.com,REJECT
-HOST-SUFFIX,temai.taobao.com,REJECT
-HOST-SUFFIX,ttjx-online.cn-hangzhou.log.aliyuncs.com,REJECT
-HOST-SUFFIX,tunion-api.m.taobao.com,REJECT
-HOST-SUFFIX,unitacs.m.taobao.com,REJECT
-HOST-SUFFIX,userimg.qunar.com,REJECT
-HOST-SUFFIX,w.m.taobao.com,REJECT
-HOST-SUFFIX,wrating.com,REJECT
-HOST-SUFFIX,xz-development.oss-cn-beijing.aliyuncs.com,REJECT
-HOST-SUFFIX,yiliao.hupan.com,REJECT
-HOST-SUFFIX,a.baidu.com,REJECT
-HOST-SUFFIX,ad.player.baidu.com,REJECT
-HOST-SUFFIX,adm.baidu.com,REJECT
-HOST-SUFFIX,afd.baidu.com,REJECT
-HOST-SUFFIX,als.baidu.com,REJECT
-HOST-SUFFIX,anquan.baidu.com,REJECT
-HOST-SUFFIX,antivirus.baidu.com,REJECT
-HOST-SUFFIX,appc.baidu.com,REJECT
-HOST-SUFFIX,baichuan.baidu.com,REJECT
-HOST-SUFFIX,baidutv.baidu.com,REJECT
-HOST-SUFFIX,banlv.baidu.com,REJECT
-HOST-SUFFIX,bar.baidu.com,REJECT
-HOST-SUFFIX,bce.baidu.com,REJECT
-HOST-SUFFIX,bdimg.share.baidu.com,REJECT
-HOST-SUFFIX,bdplus.baidu.com,REJECT
-HOST-SUFFIX,btlaunch.baidu.com,REJECT
-HOST-SUFFIX,c.baidu.com,REJECT
-HOST-SUFFIX,cb.baidu.com,REJECT
-HOST-SUFFIX,cbjs.baidu.com,REJECT
-HOST-SUFFIX,cjhq.baidu.com,REJECT
-HOST-SUFFIX,cleaner.baidu.com,REJECT
-HOST-SUFFIX,click.bes.baidu.com,REJECT
-HOST-SUFFIX,click.hm.baidu.com,REJECT
-HOST-SUFFIX,cm.baichuan.baidu.com,REJECT
-HOST-SUFFIX,cm.baidu.com,REJECT
-HOST-SUFFIX,cm.pos.baidu.com,REJECT
-HOST-SUFFIX,cpro.baidu.cn,REJECT
-HOST-SUFFIX,cpro.baidu.com,REJECT
-HOST-SUFFIX,cpro.baidustatic.com,REJECT
-HOST-SUFFIX,cpro.tieba.baidu.com,REJECT
-HOST-SUFFIX,cpro.zhidao.baidu.com,REJECT
-HOST-SUFFIX,cpro2.baidu.com,REJECT
-HOST-SUFFIX,cpro2.baidustatic.com,REJECT
-HOST-SUFFIX,cpu.baidu.com,REJECT
-HOST-SUFFIX,cpu-admin.baidu.com,REJECT
-HOST-SUFFIX,crs.baidu.com,REJECT
-HOST-SUFFIX,datax.baidu.com,REJECT
-HOST-SUFFIX,dl.client.baidu.com,REJECT
-HOST-SUFFIX,dl.ops.baidu.com,REJECT
-HOST-SUFFIX,dl1sw.baidu.com,REJECT
-HOST-SUFFIX,dl2.bav.baidu.com,REJECT
-HOST-SUFFIX,dlsw.baidu.com,REJECT
-HOST-SUFFIX,dlsw.br.baidu.com,REJECT
-HOST-SUFFIX,dl-vip.bav.baidu.com,REJECT
-HOST-SUFFIX,dl-vip.pcfaster.baidu.co.th,REJECT
-HOST-SUFFIX,download.bav.baidu.com,REJECT
-HOST-SUFFIX,download.sd.baidu.com,REJECT
-HOST-SUFFIX,drmcmm.baidu.com,REJECT
-HOST-SUFFIX,dup.baidustatic.com,REJECT
-HOST-SUFFIX,dxp.baidu.com,REJECT
-HOST-SUFFIX,dzl.baidu.com,REJECT
-HOST-SUFFIX,eclick.baidu.com,REJECT
-HOST-SUFFIX,eiv.baidu.com,REJECT
-HOST-SUFFIX,em.baidu.com,REJECT
-HOST-SUFFIX,entry.baidu.com,REJECT
-HOST-SUFFIX,ers.baidu.com,REJECT
-HOST-SUFFIX,f10.baidu.com,REJECT
-HOST-SUFFIX,fclick.baidu.com,REJECT
-HOST-SUFFIX,fc-feed.cdn.bcebos.com,REJECT
-HOST-SUFFIX,fexclick.baidu.com,REJECT
-HOST-SUFFIX,g.baidu.com,REJECT
-HOST-SUFFIX,gimg.baidu.com,REJECT
-HOST-SUFFIX,guanjia.baidu.com,REJECT
-HOST-SUFFIX,hc.baidu.com,REJECT
-HOST-SUFFIX,hm.baidu.com,REJECT
-HOST-SUFFIX,hmma.baidu.com,REJECT
-HOST-SUFFIX,hpd.baidu.com,REJECT
-HOST-SUFFIX,idm.bce.baidu.com,REJECT
-HOST-SUFFIX,idm-su.baidu.com,REJECT
-HOST-SUFFIX,iebar.baidu.com,REJECT
-HOST-SUFFIX,ikcode.baidu.com,REJECT
-HOST-SUFFIX,j.br.baidu.com,REJECT
-HOST-SUFFIX,kstj.baidu.com,REJECT
-HOST-SUFFIX,log.music.baidu.com,REJECT
-HOST-SUFFIX,m1.baidu.com,REJECT
-HOST-SUFFIX,ma.baidu.com,REJECT
-HOST-SUFFIX,mpro.baidu.com,REJECT
-HOST-SUFFIX,msite.baidu.com,REJECT
-HOST-SUFFIX,nsclick.baidu.com,REJECT
-HOST-SUFFIX,nsclickvideo.baidu.com,REJECT
-HOST-SUFFIX,openrcv.baidu.com,REJECT
-HOST-SUFFIX,pc.videoclick.baidu.com,REJECT
-HOST-SUFFIX,pos.baidu.com,REJECT
-HOST-SUFFIX,push.zhanzhang.baidu.com,REJECT
-HOST-SUFFIX,qianclick.baidu.com,REJECT
-HOST-SUFFIX,release.baidu.com,REJECT
-HOST-SUFFIX,rigel.baidustatic.com,REJECT
-HOST-SUFFIX,river.zhidao.baidu.com,REJECT
-HOST-SUFFIX,rj.baidu.com,REJECT
-HOST-SUFFIX,rplog.baidu.com,REJECT
-HOST-SUFFIX,s.cpro.baidu.com,REJECT
-HOST-SUFFIX,sa.tuisong.baidu.com,REJECT
-HOST-SUFFIX,sclick.baidu.com,REJECT
-HOST-SUFFIX,sestat.baidu.com,REJECT
-HOST-SUFFIX,shadu.baidu.com,REJECT
-HOST-SUFFIX,share.baidu.com,REJECT
-HOST-SUFFIX,snippet.pos.baidu.com,REJECT
-HOST-SUFFIX,sobar.baidu.com,REJECT
-HOST-SUFFIX,sobartop.baidu.com,REJECT
-HOST-SUFFIX,spcode.baidu.com,REJECT
-HOST-SUFFIX,stat.v.baidu.com,REJECT
-HOST-SUFFIX,t10.baidu.com,REJECT
-HOST-SUFFIX,t11.baidu.com,REJECT
-HOST-SUFFIX,t12.baidu.com,REJECT
-HOST-SUFFIX,tk.baidu.com,REJECT
-HOST-SUFFIX,tkweb.baidu.com,REJECT
-HOST-SUFFIX,tongji.baidu.com,REJECT
-HOST-SUFFIX,toolbar.baidu.com,REJECT
-HOST-SUFFIX,tracker.baidu.com,REJECT
-HOST-SUFFIX,tuijian.baidu.com,REJECT
-HOST-SUFFIX,ubmcmm.baidustatic.com,REJECT
-HOST-SUFFIX,ucstat.baidu.com,REJECT
-HOST-SUFFIX,ulic.baidu.com,REJECT
-HOST-SUFFIX,ulog.imap.baidu.com,REJECT
-HOST-SUFFIX,union.baidu.com,REJECT
-HOST-SUFFIX,unionimage.baidu.com,REJECT
-HOST-SUFFIX,utility.baidu.com,REJECT
-HOST-SUFFIX,utk.baidu.com,REJECT
-HOST-SUFFIX,videopush.baidu.com,REJECT
-HOST-SUFFIX,w.gdown.baidu.com,REJECT
-HOST-SUFFIX,w.x.baidu.com,REJECT
-HOST-SUFFIX,wangmeng.baidu.com,REJECT
-HOST-SUFFIX,weishi.baidu.com,REJECT
-HOST-SUFFIX,wisepush.video.baidu.com,REJECT
-HOST-SUFFIX,wm.baidu.com,REJECT
-HOST-SUFFIX,wn.pos.baidu.com,REJECT
-HOST-SUFFIX,znsv.baidu.com,REJECT
-HOST-SUFFIX,c-nfa.jd.com,REJECT
-HOST-SUFFIX,cps.360buy.com,REJECT
-HOST-SUFFIX,jzt.jd.com,REJECT
-HOST-SUFFIX,stat.m.jd.com,REJECT
-HOST-SUFFIX,img-x.jd.com,REJECT
-HOST-SUFFIX,2052.flash2-http.qq.com,REJECT
-HOST-SUFFIX,act.qq.com,REJECT
-HOST-SUFFIX,activeqq.3g.qq.com,REJECT
-HOST-SUFFIX,ad.qq.com,REJECT
-HOST-SUFFIX,ad.qun.qq.com,REJECT
-HOST-SUFFIX,adping.qq.com,REJECT
-HOST-SUFFIX,adpm.app.qq.com,REJECT
-HOST-SUFFIX,adv.app.qq.com,REJECT
-HOST-SUFFIX,adver.qq.com,REJECT
-HOST-SUFFIX,aiseet.aa.atianqi.com,REJECT
-HOST-SUFFIX,analy.qq.com,REJECT
-HOST-SUFFIX,android.rqd.qq.com,REJECT
-HOST-SUFFIX,appsupport.qq.com,REJECT
-HOST-SUFFIX,astat.bugly.qq.com,REJECT
-HOST-SUFFIX,boss.qzone.qq.com,REJECT
-HOST-SUFFIX,bugreportv2.qq.com,REJECT
-HOST-SUFFIX,c.gj.qq.com,REJECT
-HOST-SUFFIX,ca.gtimg.com,REJECT
-HOST-SUFFIX,cgi.connect.qq.com,REJECT
-HOST-SUFFIX,client.show.qq.com,REJECT
-HOST-SUFFIX,d3g.qq.com,REJECT
-HOST-SUFFIX,dir.minigame.qq.com,REJECT
-HOST-SUFFIX,download.sj.qq.com,REJECT
-HOST-SUFFIX,dp3.qq.com,REJECT
-HOST-SUFFIX,e.qq.com,REJECT
-HOST-SUFFIX,etg.qq.com,REJECT
-HOST-SUFFIX,fiction.b0.upaiyun.com,REJECT
-HOST-SUFFIX,fm.qzone.qq.com,REJECT
-HOST-SUFFIX,fodder.qq.com,REJECT
-HOST-SUFFIX,fodder.tc.qq.com,REJECT
-HOST-SUFFIX,fw.qq.com,REJECT
-HOST-SUFFIX,game.html5.qq.com,REJECT
-HOST-SUFFIX,httpring.qq.com,REJECT
-HOST-SUFFIX,if.mingxing.qq.com,REJECT
-HOST-SUFFIX,img1.sj.qq.com,REJECT
-HOST-SUFFIX,ios.bugly.qq.com,REJECT
-HOST-SUFFIX,isdspeed.qq.com,REJECT
-HOST-SUFFIX,j.wit.qq.com,REJECT
-HOST-SUFFIX,jingjia.qq.com,REJECT
-HOST-SUFFIX,jpush.html5.qq.com,REJECT
-HOST-SUFFIX,jqmt.qq.com,REJECT
-HOST-SUFFIX,jsqmt.qq.com,REJECT
-HOST-SUFFIX,lb.gtimg.com,REJECT
-HOST-SUFFIX,log.tbs.qq.com,REJECT
-HOST-SUFFIX,mapp.qzone.qq.com,REJECT
-HOST-SUFFIX,mcgi.v.qq.com,REJECT
-HOST-SUFFIX,mdevstat.qqlive.qq.com,REJECT
-HOST-SUFFIX,mi.gdt.qq.com,REJECT
-HOST-SUFFIX,mini2015.qq.com,REJECT
-HOST-SUFFIX,monitor.uu.qq.com,REJECT
-HOST-SUFFIX,mqqad.cs0309.html5.qq.com,REJECT
-HOST-SUFFIX,mqqad.html5.qq.com,REJECT
-HOST-SUFFIX,mqqadr.reader.qq.com,REJECT
-HOST-SUFFIX,news.mpush.qq.com,REJECT
-HOST-SUFFIX,novelsns.html5.qq.com,REJECT
-HOST-SUFFIX,openapi.guanjia.qq.com,REJECT
-HOST-SUFFIX,oth.eve.mdt.qq.com,REJECT
-HOST-SUFFIX,oth.str.mdt.qq.com,REJECT
-HOST-SUFFIX,oth.update.mdt.qq.com,REJECT
-HOST-SUFFIX,p.store.qq.com,REJECT
-HOST-SUFFIX,pagespeed.report.qq.com,REJECT
-HOST-SUFFIX,pgdt.gtimg.cn,REJECT
-HOST-SUFFIX,pinghot.qq.com,REJECT
-HOST-SUFFIX,pingjs.qq.com,REJECT
-HOST-SUFFIX,pingma.qq.com,REJECT
-HOST-SUFFIX,pingtcss.qq.com,REJECT
-HOST-SUFFIX,pmir.3g.qq.com,REJECT
-HOST-SUFFIX,pms.mb.qq.com,REJECT
-HOST-SUFFIX,push.qq.com,REJECT
-HOST-SUFFIX,pvstat.html5.qq.com,REJECT
-HOST-SUFFIX,qqshow2-item.qq.com,REJECT
-HOST-SUFFIX,qss-client.qq.com,REJECT
-HOST-SUFFIX,recmd.html5.qq.com,REJECT
-HOST-SUFFIX,rh.qq.com,REJECT
-HOST-SUFFIX,rich.qq.com,REJECT
-HOST-SUFFIX,rs1.qq.com,REJECT
-HOST-SUFFIX,rs2.qq.com,REJECT
-HOST-SUFFIX,scdown.qq.com,REJECT
-HOST-SUFFIX,sdk.e.qq.com,REJECT
-HOST-SUFFIX,setting.snswin.qq.com,REJECT
-HOST-SUFFIX,showwxml.qq.com,REJECT
-HOST-SUFFIX,sngmta.qq.com,REJECT
-HOST-SUFFIX,t.sj.qq.com,REJECT
-HOST-SUFFIX,ta.qq.com,REJECT
-HOST-SUFFIX,tajs.qq.com,REJECT
-HOST-SUFFIX,taobao.qq.com,REJECT
-HOST-SUFFIX,tcss.qq.com,REJECT
-HOST-SUFFIX,tj.b.qq.com,REJECT
-HOST-SUFFIX,tj.video.qq.com,REJECT
-HOST-SUFFIX,tools.3g.qq.com,REJECT
-HOST-SUFFIX,tpush.html5.qq.com,REJECT
-HOST-SUFFIX,trace.qq.com,REJECT
-HOST-SUFFIX,union.discuz.qq.com,REJECT
-HOST-SUFFIX,updatecenter.qq.com,REJECT
-HOST-SUFFIX,user1.game.qq.com,REJECT
-HOST-SUFFIX,uu.qq.com,REJECT
-HOST-SUFFIX,variety.tc.qq.com,REJECT
-HOST-SUFFIX,video.ureport.push.qq.com,REJECT
-HOST-SUFFIX,video.wap.mpush.qq.com,REJECT
-HOST-SUFFIX,vlive.qqvideo.tc.qq.com,REJECT
-HOST-SUFFIX,vmindhls.tc.qq.com,REJECT
-HOST-SUFFIX,vpic.video.qq.com,REJECT
-HOST-SUFFIX,wap.mpush.qq.com,REJECT
-HOST-SUFFIX,wb.gtimg.com,REJECT
-HOST-SUFFIX,ws.sj.qq.com,REJECT
-HOST-SUFFIX,wxsnsdy.tc.qq.com,REJECT
-HOST-SUFFIX,wxsnsdy.video.qq.com,REJECT
-HOST-SUFFIX,31.media.tumblr.com,REJECT
-HOST-SUFFIX,92x.tumblr.com,REJECT
-HOST-SUFFIX,its-dori.tumblr.com,REJECT
-HOST-SUFFIX,tumblrprobes.cedexis.com,REJECT
-HOST-SUFFIX,tumblrreports.cedexis.com,REJECT
-HOST-SUFFIX,p.twitter.com,REJECT
-HOST-SUFFIX,scribe.twitter.com,REJECT
-HOST-SUFFIX,syndication.twitter.com,REJECT
-HOST-SUFFIX,syndication-o.twitter.com,REJECT
-HOST-SUFFIX,urls.api.twitter.com,REJECT
 HOST-KEYWORD,admarvel,REJECT
 HOST-KEYWORD,admaster,REJECT
 HOST-KEYWORD,admdfs,REJECT
@@ -672,14 +327,6 @@ HOST-KEYWORD,umtrack,REJECT
 HOST-KEYWORD,usage,REJECT
 HOST-KEYWORD,wlmonitor,REJECT
 HOST-KEYWORD,zjtoolbar,REJECT
-// iQiyi
-DOMAIN-SUFFIX,cupid.iqiyi.com,REJECT
-DOMAIN,ifacelog.iqiyi.com,REJECT
-DOMAIN,mbdlog.iqiyi.com,REJECT
-DOMAIN,msg.71.am,REJECT
-IP-CIDR,101.227.97.240/32,REJECT,no-resolve
-IP-CIDR,101.227.200.28/32,REJECT,no-resolve
-IP-CIDR,124.192.153.42/32,REJECT,no-resolve
 
 HOST-SUFFIX,12306.com,DIRECT
 HOST-SUFFIX,126.net,DIRECT
